--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "duhacks",
-  "version": "0.1.0",
+  "homepage": "https://laconga.redclara.net/hackathon/dev",
+  "name": "CoAfina",
+  "version": "0.5.0",
   "private": true,
   "dependencies": {
     "@devexpress/dx-core": "^2.7.6",
@@ -24,9 +25,8 @@
     "babel": "^6.23.0",
     "bootstrap": "^4.6.0",
     "express": "^4.17.1",
-    "node-sass": "^6.0.1",
+    "sass": "^1.77",
     "prettier": "^2.3.2",
-    "prettierrc": "0.0.0-5",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-countdown": "^2.3.2",
@@ -38,14 +38,16 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-typed": "^1.2.0",
     "save-dev": "0.0.1-security",
     "styled-components": "^5.3.3",
     "typed.js": "^2.0.12",
     "typescript": "^4.9.4",
     "use-dark-mode": "^2.3.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2"
   },
   "scripts": {
     "predeploy": "npm run build",
