--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://laconga.redclara.net/hackathon/dev",
+  "homepage": "https://laconga.redclara.net/hackathon",
   "name": "CoAfina",
   "version": "0.5.0",
   "private": true,
